# checkers-game-online-backend

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/classes/: board.py  checkers.py  piece.py  player.py
authentication/: admin.py  tests.py  urls.py  utils.py
authentication/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff_user_is_superuser.py  0003_user_groups_user_user_permissions.py  0004_user_is_verified.py  0005_user_secret.py
authentication/models/: user.py
authentication/serializers/: user_serializer.py
authentication/tests/: test_mail_verification.py  test_reset_password_confirm.py  test_reset_password_request.py  test_user_login.py  test_user_register.py
authentication/views/: password_reset_confirm_view.py  password_reset_request_view.py  user_view.py  verify_account_view.py
base/: asgi.py  extended_redis_channel_layer.py  middleware.py  routing.py  settings.py  settings_test.py  urls.py
gameroom/consumers/: gameroom_consumer.py
gameroom/tests/: test_gameflow.py  test_gameroom_consumer.py
