[tool.poetry]
name = "damas"
version = "0.1.0"
description = ""
authors = ["Luiz Antonio Rozendo <luiz.rozendo01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
channels = {extras = ["daphne"], version = "^4.1.0"}
Django = "^5.0.7"
pytest-djangorestframework = "^0.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
